# llm-finetuning-playground

./: .gitattributes  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  ruff.toml
grpo_saved_lora/: README.md  adapter_config.json  adapter_model.safetensors
grpo_trainer_lora_model/: adapter_config.json
src/: config.py  data_prep.py  evaluation.py  finetune.py  inference.py  save_gguf.py
