[project]
name = "llm-finetuning-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "pre-commit>=4.0.1",
    "python-dotenv>=1.0.1",
    "ruff>=0.8.4",
    "tqdm>=4.67.1",
    "unsloth>=2025.6.12",
    "vllm==0.8.5.post1",
    "setuptools>=80.9.0"
]
